<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_selector_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_outline_share_location_24"
        android:title="@string/title_lapor" />

    <item
        android:enabled="false"
        android:id="@+id/navigation_fab"
        android:checked="false"
        android:title="@string/title_fab"
        android:checkable="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_selector_person"
        android:title="@string/title_account" />

</menu>