<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:src="@drawable/img_no_internet_amico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/title_no_internet"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:text="@string/text_no_internet"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/open_settings"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/open_settings"
                app:cornerRadius="50dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/retry"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/retry"
                app:cornerRadius="50dp"
                style="@style/Widget.MaterialComponents.Button"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>